--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme without an ActionBar (no top title bar). -->
-    <style name="Theme.PassportScanner" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.EarthWallet" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#2196F3</item>
         <item name="colorPrimaryVariant">#1976D2</item>
@@ -19,7 +19,7 @@
         <!-- Customize your theme here. -->
     </style>
 <!-- NoDisplay variant that is still AppCompat-compatible (transparent/translucent, no UI) -->
-    <style name="Theme.PassportScanner.NoDisplay" parent="Theme.PassportScanner">
+    <style name="Theme.EarthWallet.NoDisplay" parent="Theme.EarthWallet">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
