refactor: remove legacy activities and consolidate UI architecture
Remove standalone activities (MainActivity, WalletActivity, ActionsActivity, etc.) and their associated layouts in favor of a fragment-based architecture within HostActivity. This consolidation eliminates code duplication, provides consistent navigation, and simplifies the app structure.

- Remove 6 activity classes and their XML layouts
- Simplify ANMLClaimFragment to basic UI component
- Update ScannerFragment to use PassportScannerFragment
- Streamline WalletListFragment interface
- Remove redundant manifest activity declarations
- Maintain NFC handling through HostActivity

--- a/app/src/main/res/layout/fragment_actions_main.xml
+++ b/app/src/main/res/layout/fragment_actions_main.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sidebar_bg"
-    tools:context=".ActionsActivity">
+    android:background="@color/sidebar_bg">
 
     <!-- Top logo section (matches desktop sidebar logo placement) -->
     <LinearLayout
@@ -32,7 +31,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/logo_section"
-        android:layout_marginBottom="56dp"
         android:fillViewport="true"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
@@ -73,6 +71,5 @@
 
         </LinearLayout>
     </ScrollView>
-
 
 </RelativeLayout>
