--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".MainActivity">
+    tools:context=".ui.fragments.PassportScannerFragment">
+
+    <RelativeLayout
+        android:id="@+id/passport_scanner_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp">
 
     <TextView
         android:id="@+id/title_text"
@@ -351,4 +356,6 @@
         </LinearLayout>
     </ScrollView>
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</FrameLayout>
