--- a/app/src/main/res/layout/fragment_anml_register.xml
+++ b/app/src/main/res/layout/fragment_anml_register.xml
@@ -7,18 +7,18 @@
     android:gravity="center">
 
     <ImageView
-        android:id="@+id/claim_anml_image"
+        android:id="@+id/register_passport_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:src="@drawable/anml"
+        android:src="@drawable/passport_image"
         android:contentDescription="@string/passport_scan"
         android:adjustViewBounds="true"
         android:scaleType="centerInside"
         android:importantForAccessibility="yes" />
 
     <Button
-        android:id="@+id/btn_claim"
+        android:id="@+id/btn_open_wallet"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -27,10 +27,10 @@
         android:paddingRight="20dp"
         android:background="@drawable/btn_anml_desktop"
         android:backgroundTint="@null"
-        android:text="Claim (Native)"
+        android:text="Register"
         android:textColor="@color/anml_button_text"
         android:textAllCaps="false"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:gravity="center"
         android:stateListAnimator="@null" />
 </LinearLayout>
