--- a/app/src/main/res/layout/fragment_wallet_list.xml
+++ b/app/src/main/res/layout/fragment_wallet_list.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="12dp">
+    android:padding="12dp"
+    android:background="@color/sidebar_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
